--- a/src/components/FileUploader/style.css
+++ b/src/components/FileUploader/style.css
@@ -24,13 +24,7 @@
 }
 
 input::file-selector-button {
-    margin: 3vh;
-    left: 0;
-    font-size: 1.5vh;
-    right: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;;
-    background: white;
-    border-radius: 6px;
+    display: none;
 }
 
 
@@ -44,6 +38,8 @@ input::file-selector-button {
     margin-bottom: 4vh;
 }
 .files input[type=file] {
+    font-size: 2vh;
+    padding: 2vh;
     width: 100%;
 }
 
