--- a/src/components/FileUploader/style.css
+++ b/src/components/FileUploader/style.css
@@ -24,19 +24,24 @@
 }
 
 input::file-selector-button {
+    position: relative;
     background: white;
     margin-top: 1%;
+    border: none;
+    color: white;
 }
 
 
 .files input {
-   padding-left: 1vh;
+        padding-left: 1vh;
     border: 1px solid #E7E7E7;/*Цвет Границы(border)*/
     min-height: 3vh;
     border-radius: 10px 10px 10px 10px;
     width: 40vh;
     max-width: 100%;
     margin-bottom: 4vh;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;;
+
 }
 .files input[type=file] {
     width: 100%;
